<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signin_btn"
        style="@style/DefaultSolid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="girisYap"
        android:text="@string/signin_btn"
        app:layout_constraintBottom_toTopOf="@+id/infoDont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/logIn"
        style="@style/Heading1Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins"
        android:text="@string/signInHeader"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- PASSWORD PART STARTS -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/signin_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/primary_light">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:hint="@string/helperText_password"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/labelPassword"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        android:text="@string/password"
        app:layout_constraintBottom_toTopOf="@+id/etLayoutPassword"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- PASSWORD PART ENDS -->


    <!-- EMAIL PART STARTS -->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:textColorHint="@color/gray"
        app:layout_constraintBottom_toTopOf="@+id/labelPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_rounded"
            android:hint="@string/helper_textEmail"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/labelEmail"
        style="@style/LabelText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/etLayoutEmail"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/email" />

    <!-- EMAIL PART ENDS -->

    <TextView
        android:id="@+id/infoDont"
        style="@style/BodyText"
        android:textColor="@color/gray"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="64dp"
        android:text="@string/infoDont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textUp"
        style="@style/BodyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="64dp"
        android:onClick="dontHaveAnAccount"
        android:text="@string/sign_up"
        android:textColor="@color/primary_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/infoDont" />


</androidx.constraintlayout.widget.ConstraintLayout>
    <!-- figmada yok ibo kullanıyodu = android:hint="hint" -->